--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -36,7 +36,19 @@
 .half-banner img:hover{
     transform: scale(1.02);
 }
-
+@media only screen and (max-width: 668px) {
+    .top-banner{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .half-banner{
+        width: 100%;
+        padding: 30px;
+        display: block;
+    }
+}
 
 
 
